[package]
name = "arraylike"
version = "0.1.0"
authors = ["James Forster <james.forsterer@gmail.com>"]
edition = "2021"
description = """
This crate provides an ArrayLike trait for using arrays without needing
const expressions.
"""
documentation = "https://docs.rs/arraylike"
readme = "README.md"
homepage = "https://github.com/ripytide/arraylike"
repository = "https://github.com/ripytide/arraylike"
license = "MIT"
keywords = ["const-generic"]
categories = []

[dependencies]

[features]
default = []

[lints.rust]
missing_docs = "deny"
